...
            MenuButton("Functions", selectedMenu == "Functions") { selectedMenu = "Functions" }
          }

          Spacer(modifier = Modifier.height(16.dp))

          Box(
              modifier = Modifier.fillMaxWidth().weight(1f).padding(16.dp).testTag("display"),
              contentAlignment = Alignment.TopStart) {
                Column(modifier = Modifier.fillMaxWidth()) {
                  Row(
                      modifier = Modifier.fillMaxWidth(),
                      horizontalArrangement = Arrangement.SpaceBetween,
                      verticalAlignment = Alignment.CenterVertically) {
...
                        Text(
                            text = displayWithCursor,
                            fontSize = 26.sp,
                            fontWeight = FontWeight.SemiBold,
                            textAlign = TextAlign.Start,
                            color = MaterialTheme.colorScheme.onBackground,
                            modifier = Modifier.weight(1f).testTag("displayText"))

                        IconButton(
                            onClick = {
                              display = ""
                              cursorPosition = 0
                              result = ""
...
                          Text(
                              text = result,
                              fontSize = 20.sp,
                              color = Color.Gray,
                              textAlign = TextAlign.Start,
                              fontWeight = FontWeight.Light,
                              modifier = Modifier.padding(top = 8.dp).testTag("resultText"))
                        }
                  }
                }
              }

          Column(
...
